<resources>
    <string name="app_name">SIT305_51C</string>
    <string name="dashboard_title">Stream Dashboard</string>
    <string name="btn_bookmark">Bookmark Story</string>
    <string name="btn_share">Share</string>
    <string name="header_related">RELATED STORIES</string>>
    <string name="cd_news_image">Headline news image</string>
    <string name="hint_youtube_url">Paste YouTube URL</string>
    <string name="btn_play">Play Video</string>
    <string name="btn_add_playlist">Add to My Playlist</string>
    <string name="btn_view_playlist">View My Playlist</string>
    <string name="btn_logout">Logout</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_no_account">No account? Signup</string>
    <string name="playlist_header">My Saved Videos</string>
    <string name="title_create_account">Create Account</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="placeholder_video_title">Video Title</string>
    <string name="placeholder_video_url">https://youtube.com/&#8230;</string>
    <string name="bookmarks_title">YOUR BOOKMARKS</string>
    <string name="news_title">NEWS</string>
    <string name="chip_all">All</string>
    <string name="chip_football">Football</string>
    <string name="chip_cricket">Cricket</string>
    <string name="chip_athletics">Athletics</string>
    <string name="chip_basketball">Basketball</string>
    <string name="cd_news_thumbnail">Thumbnail image for news story</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_bookmarks">Bookmarks</string>
</resources>